# offer-helper

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  SKILL.md  pyproject.toml  schema.sql  setup.sh
boss/: __init__.py  app.py  automation.py  company.py  config.yaml  firefox.py  llm_client.py  rag.py  replier.py  requirements.txt  scraper.py  state.py
boss/agent/: __init__.py  loop.py  prompts.py  skills.py  tools.py
boss/static/: dashboard.html
boss/static/css/: style.css
boss/static/js/: app.js  assistant.js  mock.js  smart-send.js
interview/: .benchmark_paraphrase_cache.json  main.py  requirements.txt
interview/assistant/: README.md  __init__.py  agent.py  audio_capture.py  classifier.py  config.py  humanizer.py  mock.py  mock_routes.py  resume.py  routes.py  speech.py  vector_rag.py
interview/data/resumes/default/: 简历.json
offerhelper_cli/: CLAUDE.md  __init__.py  cli.py  client.py  schema.json
